# new

./: .gitattributes  .gitignore  .replit  README.md  cleanup_redundant_files.sh  pyproject.toml  replit.nix
core/: __init__.py  admin.py  apps.py  context_processors.py  filters.py  forms.py  models.py  search_adapters.py  tests.py  urls.py
discuss/: asgi.py  settings.py  urls.py  wsgi.py
profiles/: 040288eb-dc7a-4d42-a2d5-e41d5ff8babb.prof  0751e18f-11a2-4e48-8ad1-0620e034b11d.prof  085b071a-007a-4abe-98f2-c5fb7ec121c8.prof  09e471e0-199d-45f7-900f-1b8f8158c003.prof  0a362e4e-6a48-4020-a0f9-d0bbf262d3c9.prof  0df6253c-1b04-429e-9c10-32e11ed3395a.prof  0e4e7fcb-acec-4080-b1ee-a82152c28085.prof  1005b44e-a062-4ed5-87d3-9e801cc49fbe.prof  128ca319-7b12-4341-8664-53efb8c7cea1.prof  137f55ee-0027-44ef-ae45-17b9b41b572b.prof  16e735db-96f6-4c74-9a51-cd128e1c071e.prof  1c82e9b1-5c33-4ba7-8036-19529c037ae0.prof  2142f5c2-41c6-42eb-a404-9278c524e5fb.prof  24fd1160-a033-4336-9e8e-533ddfb187de.prof  26fab889-8ac0-4076-81db-223d1d545be2.prof  2b0bbcdc-b71f-4988-b90e-4555ee559fc0.prof  2bd404f3-3c92-418f-922a-4a6ffe4a0e13.prof  2f9a335d-c65e-4f5a-871c-5650b7b59abb.prof  31f4dd03-9933-4e69-a2db-b63c60ed6328.prof  3498a524-7476-4301-a577-24af117d5e08.prof  357bb56c-d5a3-407b-ad04-2a72b7692949.prof  3d9425f0-5799-44d5-b640-c1b7cc4401ea.prof  3fbd97e1-a3cc-49f9-a9ac-2dd76bdcf30c.prof  40f4874e-bc04-463c-b2fa-38b33b3eacf4.prof  410d7151-aa09-4f42-8297-76ee3a17d988.prof  416e1705-d185-4bb2-9964-9fa48484f346.prof  416fc43d-1665-4d0a-b12c-1beb5c0d9fdd.prof  (+93 more)
utils/: check_comments.py  (+5 more)
(+116 files in other folders)
